--- a/kotlin-eclipse-core/plugin.xml
+++ b/kotlin-eclipse-core/plugin.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension-point id="org.jetbrains.kotlin.core.scriptTemplateProvider" name="Kotlin Script Template Provider" schema="schema/org.jetbrains.kotlin.core.scriptTemplateProvider.exsd"/>
-   <extension-point id="org.jetbrains.kotlin.core.scriptTemplateProviderEx" name="Kotlin Script Template Provider" schema="schema/org.jetbrains.kotlin.core.scriptTemplateProviderEx.exsd"/>
+   <extension-point id="org.jetbrains.kotlin.core.scriptDefinitionContribution" name="Kotlin Script Definition Contribution" schema="schema/org.jetbrains.kotlin.core.scriptDefinitionContribution.exsd"/>
    <extension
          id="org.jetbrains.kotlin.core.kotlinNature"
          name="KotlinNature"
@@ -51,5 +50,11 @@
             class="org.jetbrains.kotlin.core.KotlinClasspathProvider"
             id="org.jetbrains.kotlin.core.kotlinClasspathProvider">
       </classpathProvider>
+   </extension>
+   <extension
+         point="org.jetbrains.kotlin.core.scriptDefinitionContribution">
+      <contribution
+            class="org.jetbrains.kotlin.core.model.IdeScriptDefinitionContribution">
+      </contribution>
    </extension>
 </plugin>
